增加是否显示遮罩层控制

--- a/trapezoid-view/src/main/res/values/attrs.xml
+++ b/trapezoid-view/src/main/res/values/attrs.xml
@@ -4,5 +4,6 @@
         <attr name="trapezoidIncline" format="dimension" />
         <attr name="trapezoidRadius" format="dimension" />
         <attr name="trapezoidShadeColors" format="reference" />
+        <attr name="trapezoidIsShowShade" format="boolean" />
     </declare-styleable>
 </resources>
