--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/img_2"
-            app:trapezoidIncline="80dp"
+            app:trapezoidIncline="80dp" app:trapezoidIsShowShade="true"
             app:trapezoidRadius="15dp"
             app:trapezoidShadeColors="@array/ShadeColors_2" />
 
@@ -38,17 +38,28 @@
             android:scaleType="centerCrop"
             android:src="@mipmap/img_3"
             app:trapezoidIncline="100dp"
+            app:trapezoidIsShowShade="true"
+
             app:trapezoidRadius="20dp"
             app:trapezoidShadeColors="@array/ShadeColors_3" />
+
         <com.fphoenixcorneae.widget.trapezoidview.TrapezoidImageView
             android:id="@+id/iv_image_4"
-            android:layout_width="match_parent"
-            android:layout_height="185dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/img_3"
-            app:trapezoidIncline="50dp"
-            app:trapezoidRadius="20dp"
- />
+            app:trapezoidIncline="20dp"
+            app:trapezoidIsShowShade="false"
+            app:trapezoidRadius="10dp" />
+
+        <ImageView
+            android:id="@+id/iv_image_5"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/img_3" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
